<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fxly.songplaytest.SettingsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/to_top"
            android:background="@drawable/shape_settings"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_song_name"
                />
            <EditText
                android:id="@+id/songname_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_songname"

                android:hint="@string/input_song_name"
                android:inputType="text" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/to_top"
            android:orientation="vertical"
            android:background="@drawable/shape_settings"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_running_time"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <!--//设置滑动器-->
                <!--天数-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/control_bar"
                    android:gravity="center_vertical"
                    android:background="@drawable/settings_btn_bg"
                    android:padding="@dimen/control_bar" >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/control_bar"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/settings_days"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <TextView
                                android:id="@+id/time_day"
                                android:layout_width="50sp"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|right"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size" >
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>





                    <SeekBar
                        android:id="@+id/timeline_day"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:max="30"

                        android:maxHeight="4.0dip"
                        android:minHeight="4.0dip"
                        android:paddingBottom="@dimen/control_bar"
                        android:paddingLeft="16.0dip"
                        android:paddingRight="16.0dip"
                        android:progress="0"
                        android:progressDrawable="@drawable/controldaytime_custom_seekbar"
                        android:thumb="@drawable/controldaytime_seekbar_thumb" />

                </LinearLayout>
                <!--小时-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/control_bar"
                    android:gravity="center_vertical"
                    android:background="@drawable/settings_btn_bg"
                    android:padding="@dimen/control_bar" >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/control_bar"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/settings_hor"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <TextView
                                android:id="@+id/time_hor"
                                android:layout_width="50sp"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|right"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size" >
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>





                    <SeekBar
                        android:id="@+id/timeline_hor"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:max="23"

                        android:maxHeight="4.0dip"
                        android:minHeight="4.0dip"
                        android:paddingBottom="@dimen/control_bar"
                        android:paddingLeft="16.0dip"
                        android:paddingRight="16.0dip"
                        android:progress="0"
                        android:progressDrawable="@drawable/controldaytime_custom_seekbar"
                        android:thumb="@drawable/controldaytime_seekbar_thumb" />

                </LinearLayout>
                <!--分钟-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/control_bar"
                    android:gravity="center_vertical"
                    android:background="@drawable/settings_btn_bg"
                    android:padding="@dimen/control_bar" >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/control_bar"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/settings_min"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right" >

                            <TextView
                                android:id="@+id/time_min"
                                android:layout_width="50sp"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|right"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size" >
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>





                    <SeekBar
                        android:id="@+id/timeline_min"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:max="59"

                        android:maxHeight="4.0dip"
                        android:minHeight="4.0dip"
                        android:paddingBottom="@dimen/control_bar"
                        android:paddingLeft="16.0dip"
                        android:paddingRight="16.0dip"
                        android:progress="0"
                        android:progressDrawable="@drawable/controldaytime_custom_seekbar"
                        android:thumb="@drawable/controldaytime_seekbar_thumb" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/to_top"
            android:background="@drawable/shape_settings"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:gravity="left"
                android:text="About"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                />
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@mipmap/right_icon"
               android:layout_weight="9"
               />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
